--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,7 +23,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Install prerequisites
-      run: python -m pip install --upgrade setuptools pip wheel tox
+    - name: Install build tools
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools tox wheel
     - name: Run ${{ matrix.env }}
       run: tox -e ${{ matrix.env }}
