--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -1,4 +1,4 @@
-name: Publish Python package
+name: Publish
 
 on:
   push:
@@ -6,17 +6,19 @@ on:
     - "*"
 
 jobs:
-  deploy:
+  publish:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Install prerequisites
-      run: python -m pip install --upgrade pip setuptools twine wheel
+    - name: Install build tools
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools build twine wheel
     - name: Build package
-      run: python setup.py sdist bdist_wheel
+      run: python -m build
     - name: Upload to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
