--- a/behave.ini
+++ b/behave.ini
@@ -1,4 +1,4 @@
 # -- FILE: behave.ini
-# Define ALIAS for HtmlFormatter.
+# Define ALIAS for PrettyHTMLFormatter.
 [behave.formatters]
 html-pretty = formatter_html_pretty:PrettyHTMLFormatter
