fix behave.ini file

--- a/behave.ini
+++ b/behave.ini
@@ -1,4 +1,4 @@
 # -- FILE: behave.ini
 # Define ALIAS for PrettyHTMLFormatter.
 [behave.formatters]
-html-pretty = formatter_html_pretty:PrettyHTMLFormatter
+html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
