update behave.ini example file

--- a/behave.ini
+++ b/behave.ini
@@ -2,3 +2,10 @@
 # Define ALIAS for PrettyHTMLFormatter.
 [behave.formatters]
 html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
+
+[behave.userdata]
+behave.formatter.html-pretty.pseudo_steps = false
+behave.formatter.html-pretty.title_string = Test Suite Reporter
+behave.formatter.html-pretty.pretty_output = true
+# '%' must be escaped in ini format
+behave.formatter.html-pretty.date_format = %%d-%%m-%%Y %%H:%%M:%%S
