Adapting feature/tox/config files for this format

--- a/tox.ini
+++ b/tox.ini
@@ -20,14 +20,14 @@ commands = behave {posargs}
 [testenv:black]
 description = Autoformat your Python code
 deps = black
-commands = black {posargs:behave_html_formatter setup.py tests}
+commands = black {posargs:behave_html_pretty_formatter setup.py tests}
 
 [testenv:clean]
 description = Clean up bytecode and build artifacts
 deps = pyclean
 commands =
     pyclean {toxinidir}
-    rm -rf .tox/ build/ dist/ behave_html_formatter.egg-info/
+    rm -rf .tox/ build/ dist/ behave_html_pretty_formatter.egg-info/
 whitelist_externals =
     rm
 
@@ -35,8 +35,8 @@ whitelist_externals =
 description = Minify CSS and JavaScript code
 deps = css-html-js-minify
 commands =
-    css-html-js-minify behave_html_formatter/behave.css
-    css-html-js-minify behave_html_formatter/behave.js
+    css-html-js-minify behave_html_pretty_formatter/theme.css
+    css-html-js-minify behave_html_pretty_formatter/script.js
 
 [testenv:flake8]
 description = Static code analysis and code style
@@ -46,7 +46,7 @@ commands = flake8 {posargs}
 [testenv:pylint]
 description = Check for errors and code smells
 deps = pylint
-commands = pylint --rcfile tox.ini {posargs:behave_html_formatter setup}
+commands = pylint --rcfile tox.ini {posargs:behave_html_pretty_formatter setup}
 
 [testenv:readme]
 description = Ensure README renders on PyPI
@@ -67,13 +67,13 @@ python =
 paths = tests/acceptance
 
 [behave.formatters]
-html = behave_html_formatter:HTMLFormatter
+html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
 
 [flake8]
-exclude = .tox,build,dist,behave_html_formatter.egg-info
+exclude = .tox,build,dist,behave_html_pretty_formatter.egg-info
 extend-ignore = E203  # see https://github.com/PyCQA/pycodestyle/issues/373
-per-file-ignores = ./behave_html_formatter/__init__.py:F401
-max-line-length = 88
+per-file-ignores = ./behave_html_pretty_formatter/__init__.py:F401
+max-line-length = 100
 
 [pylint]
 [MASTER]
