config: summary visibility on open

--- a/behave.ini
+++ b/behave.ini
@@ -9,3 +9,4 @@ behave.formatter.html-pretty.title_string = Test Suite Reporter
 behave.formatter.html-pretty.pretty_output = true
 # '%' must be escaped in ini format
 behave.formatter.html-pretty.date_format = %%d-%%m-%%Y %%H:%%M:%%S
+behave.formatter.html-pretty.show_summary = false
