config: show unexecuted steps

--- a/behave.ini
+++ b/behave.ini
@@ -10,3 +10,4 @@ behave.formatter.html-pretty.pretty_output = true
 # '%' must be escaped in ini format
 behave.formatter.html-pretty.date_format = %%d-%%m-%%Y %%H:%%M:%%S
 behave.formatter.html-pretty.show_summary = false
+behave.formatter.html-pretty.show_unexecuted_steps = true
