--- a/tox.ini
+++ b/tox.ini
@@ -71,11 +71,10 @@ html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
 
 [flake8]
 exclude = .tox,build,dist,behave_html_pretty_formatter.egg-info
-extend-ignore = E203  # see https://github.com/PyCQA/pycodestyle/issues/373
+extend-ignore = E203
 per-file-ignores = ./behave_html_pretty_formatter/__init__.py:F401
 max-line-length = 100
 
-[pylint]
-[MASTER]
-disable = attribute-defined-outside-init,invalid-name,W0511,R0903,R0902
+[pylint.main]
+disable = missing-module-docstring,too-many-lines,too-many-instance-attributes,too-many-arguments
 output-format = colorized
