--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@
 
 [tox]
 envlist =
+    behave
     flake8
     pylint
     py{36,37,38,39,py39}
@@ -10,12 +11,12 @@ envlist =
     readme
     clean
 
-[testenv]
+[testenv:behave]
 description = Tests
 deps =
     behave
     PyHamcrest
-commands = behave {posargs}
+commands = behave
 
 [testenv:black]
 description = Autoformat your Python code
@@ -27,7 +28,7 @@ description = Clean up bytecode and build artifacts
 deps = pyclean
 commands =
     pyclean {toxinidir}
-    rm -rf .tox/ build/ dist/ behave_html_pretty_formatter.egg-info/
+    rm -rf .tox/ build/ dist/ behave_html_pretty_formatter.egg-info/ tests/acceptance/steps/__WORKDIR__/
 whitelist_externals =
     rm
 
