tox.ini: add unnamed testenv

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,14 @@ envlist =
     readme
     clean
 
+[testenv]
+description = Tests
+deps =
+    behave
+    PyHamcrest
+commands = behave
+
+
 [testenv:behave]
 description = Tests
 deps =
