--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -5,12 +5,15 @@ on:
     tags:
     - "*"
 
+env:
+  PY_COLORS: "1"
+
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.x'
     - name: Install build tools
