--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,14 +8,17 @@ on:
     branches:
     - main
 
+env:
+  PY_COLORS: "1"
+
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.platform }}
     strategy:
       fail-fast: false
       matrix:
         platform:
-        - ubuntu-latest
+        - ubuntu-20.04
         - macos-latest
         - windows-latest
         python-version:
@@ -23,10 +26,12 @@ jobs:
         - '3.7'
         - '3.8'
         - '3.9'
+        - '3.10'
+        - '3.11'
         - 'pypy-3.9'
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install build tools
