--- a/tox.ini
+++ b/tox.ini
@@ -1,68 +1,17 @@
-# tox (https://tox.readthedocs.io/) is a tool for running tests
+# tox (https://tox.wiki/) is a tool for running tests
 # Run tests in multiple virtualenvs.
 
 [tox]
 envlist =
-    behave
+    black
     flake8
+    isort
     pylint
-    py{36,37,38,39,py39}
+    py3{6,7,8,9,10,11}
+    pypy3
     minify
     readme
     clean
-
-[testenv]
-description = Tests
-deps =
-    behave
-    PyHamcrest
-commands = behave
-
-
-[testenv:behave]
-description = Tests
-deps =
-    behave
-    PyHamcrest
-commands = behave
-
-[testenv:black]
-description = Autoformat your Python code
-deps = black
-commands = black {posargs:behave_html_pretty_formatter setup.py tests}
-
-[testenv:clean]
-description = Clean up bytecode and build artifacts
-deps = pyclean
-commands =
-    pyclean {toxinidir}
-    rm -rf .tox/ build/ dist/ behave_html_pretty_formatter.egg-info/ tests/acceptance/steps/__WORKDIR__/
-whitelist_externals =
-    rm
-
-[testenv:minify]
-description = Minify CSS and JavaScript code
-deps = css-html-js-minify
-commands =
-    css-html-js-minify behave_html_pretty_formatter/theme.css
-    css-html-js-minify behave_html_pretty_formatter/script.js
-
-[testenv:flake8]
-description = Static code analysis and code style
-deps = flake8-black
-commands = flake8 {posargs}
-
-[testenv:pylint]
-description = Check for errors and code smells
-deps = pylint
-commands = pylint --rcfile tox.ini {posargs:behave_html_pretty_formatter setup}
-
-[testenv:readme]
-description = Ensure README renders on PyPI
-deps = twine
-commands =
-    {envpython} setup.py -q sdist bdist_wheel
-    twine check dist/*
 
 [gh-actions]
 python =
@@ -70,7 +19,69 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
-    pypy-3.9: pypy39
+    3.10: py310
+    3.11: py311
+    pypy-3.9: pypy3
+
+[testenv]
+description = Tests
+deps =
+    behave
+    PyHamcrest
+commands = behave {posargs}
+
+[testenv:black]
+description = Ensure consistent code style
+skip_install = true
+deps = black
+commands = black {posargs:--check --diff behave_html_pretty_formatter setup.py tests}
+
+[testenv:clean]
+description = Clean up bytecode and build artifacts
+skip_install = true
+deps = pyclean
+commands =
+    pyclean {toxinidir}
+    rm -rf .tox/ build/ dist/ behave_html_pretty_formatter.egg-info/ tests/acceptance/steps/__WORKDIR__/
+whitelist_externals =
+    rm
+
+[testenv:flake8]
+description = Static code analysis and code style
+skip_install = true
+deps = flake8-black
+commands = flake8 {posargs}
+
+[testenv:isort]
+description = Ensure imports are ordered consistently
+skip_install = true
+deps = isort[colors]
+commands = isort {posargs:--check-only --diff behave_html_pretty_formatter setup.py tests}
+
+[testenv:minify]
+description = Minify CSS and JavaScript code
+deps = css-html-js-minify
+commands =
+    css-html-js-minify behave_html_pretty_formatter/behave.css
+    css-html-js-minify behave_html_pretty_formatter/behave.js
+    git diff --color --exit-code behave_html_pretty_formatter/behave.css behave_html_pretty_formatter/behave.js
+allowlist_externals =
+    git
+
+[testenv:pylint]
+description = Check for errors and code smells
+deps = pylint
+commands = pylint {posargs:behave_html_pretty_formatter setup}
+
+[testenv:readme]
+description = Ensure README renders on PyPI
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build
+    twine check dist/*
 
 [behave]
 paths = tests/acceptance
@@ -80,10 +91,7 @@ html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
 
 [flake8]
 exclude = .tox,build,dist,behave_html_pretty_formatter.egg-info
+# see https://github.com/PyCQA/pycodestyle/issues/373
 extend-ignore = E203
 per-file-ignores = ./behave_html_pretty_formatter/__init__.py:F401
-max-line-length = 100
-
-[pylint.main]
-disable = missing-module-docstring,too-many-lines,too-many-instance-attributes,too-many-arguments
-output-format = colorized
+max-line-length = 88
