Change pylint configuration
We managed not to have some warning already disabled,
 ut some new appeared, we will deal with them in the future.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,5 @@ color_output = true
 profile = "black"
 
 [tool.pylint.master]
-disable = ["attribute-defined-outside-init","invalid-name","W0511","R0903","R0902"]
+disable = ["missing-module-docstring","too-many-lines","too-many-instance-attributes","too-many-arguments"]
 output-format = "colorized"
