--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "python.testing.pytestEnabled": true,
     "python.linting.pylintPath": "pylint",
     "python.linting.pylintArgs": [
-        "--rcfile=tox.ini"
+        "--rcfile=pyproject.toml"
     ],
     "python.linting.pylintCategorySeverity.warning": "Warning",
     "python.linting.pylintEnabled": true,
