--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,32 @@
 {
-    "python.testing.pytestArgs": [
-        "tests"
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
+    /* Disable flake8 errors. */
+    /* This no longer seems to be supported.*/
+    /*"python.linting.flake8Args": [
+        "--max-line-length=120",
+        "--ignore=E203,W503,F401,F403",
     ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "python.linting.pylintPath": "pylint",
-    "python.linting.pylintArgs": [
-        "--rcfile=pyproject.toml"
+    /*Currently supported.*/
+    "flake8.args": [
+        "--max-line-length=120",
+        "--ignore=E203,W503,F401,F403",
     ],
-    "python.linting.pylintCategorySeverity.warning": "Warning",
-    "python.linting.pylintEnabled": true,
-    "python.linting.pylintCategorySeverity.refactor": "Warning"
+    "editor.rulers": [
+        88,
+        120
+    ],
+    "workbench.colorCustomizations": {
+        "editorRuler.foreground": "#000000"
+    },
+    "autoDocstring.docstringFormat": "sphinx",
+    "autoDocstring.startOnNewLine": true,
+    /* Disable specific pylance errors that are covered by linters. */
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportUnusedImport": "warning",
+        "reportMissingImports": "none",
+        "reportGeneralTypeIssues": "information",
+        "reportWildcardImportFromLibrary": "none",
+    },
 }
