--- a/tox.ini
+++ b/tox.ini
@@ -64,7 +64,7 @@ deps = css-html-js-minify
 commands =
     css-html-js-minify behave_html_pretty_formatter/behave.css
     css-html-js-minify behave_html_pretty_formatter/behave.js
-    git diff --color --exit-code behave_html_pretty_formatter/behave.css behave_html_pretty_formatter/behave.js
+    git diff --color --exit-code behave_html_pretty_formatter/behave.min.css behave_html_pretty_formatter/behave.min.js
 allowlist_externals =
     git
 
