Update vscode settings to autoformat on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,4 +23,5 @@
     "reportGeneralTypeIssues": "information",
     "reportWildcardImportFromLibrary": "none",
   },
+  "editor.formatOnSave": true,
 }
