--- a/tox.ini
+++ b/tox.ini
@@ -1,62 +1,42 @@
-# tox (https://tox.wiki/) is a tool for running tests
-# Run tests in multiple virtualenvs.
+# Run tests in isolation using virtualenv, https://tox.wiki/
 
 [tox]
 envlist =
     black
-    flake8
-    isort
-    pylint
-    py3{6,7,8,9,10,11}
-    pypy3
+    ruff
+    py3{7,8,9,10,11}
+    pypy3{8,9,10}
     minify
-    readme
+    package
     clean
-
-[gh-actions]
-python =
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    3.11: py311
-    pypy-3.9: pypy3
 
 [testenv]
 description = Tests
 deps =
-    behave
+    behave[toml]@git+http://github.com/behave/behave.git@v1.2.7.dev5
     PyHamcrest
-commands = behave {posargs}
+commands =
+    behave {posargs}
 
 [testenv:black]
 description = Ensure consistent code style
 skip_install = true
 deps = black
-commands = black {posargs:--check --diff behave_html_pretty_formatter setup.py tests}
+commands = black {posargs:--check --diff behave_html_pretty_formatter tests}
 
 [testenv:clean]
 description = Clean up bytecode and build artifacts
 skip_install = true
 deps = pyclean
-commands =
-    pyclean {toxinidir}
-    rm -rf .tox/ build/ dist/ behave_html_pretty_formatter.egg-info/ tests/acceptance/steps/__WORKDIR__/
-whitelist_externals =
-    rm
+commands = pyclean {posargs:. --debris package ruff --erase tests/TESTS-*.xml tests/acceptance/steps/__WORKDIR__/**/* tests/acceptance/steps/__WORKDIR__/ --yes}
 
-[testenv:flake8]
-description = Static code analysis and code style
-skip_install = true
-deps = flake8-black
-commands = flake8 {posargs}
-
-[testenv:isort]
-description = Ensure imports are ordered consistently
-skip_install = true
-deps = isort[colors]
-commands = isort {posargs:--check-only --diff behave_html_pretty_formatter setup.py tests}
+[testenv:ensure_version_matches]
+description = Verify package version is same as Git tag
+deps =
+commands = python -c 'import os; from importlib.metadata import version; pkg, tag = os.environ["PKG_NAME"], os.environ["GIT_TAG"]; ver = version(pkg); error = f"`{ver}` != `{tag}`"; abort = f"Package version does not match the Git tag ({error}). ABORTING."; raise SystemExit(0 if ver and tag and ver == tag else abort)'
+setenv =
+    PKG_NAME=behave-html-pretty-formatter
+    GIT_TAG={posargs}
 
 [testenv:minify]
 description = Minify CSS and JavaScript code
@@ -68,30 +48,22 @@ commands =
 allowlist_externals =
     git
 
-[testenv:pylint]
-description = Check for errors and code smells
-deps = pylint
-commands = pylint {posargs:behave_html_pretty_formatter setup}
-
-[testenv:readme]
-description = Ensure README renders on PyPI
+[testenv:package]
+description = Build package and check metadata (or upload package)
 skip_install = true
 deps =
     build
     twine
 commands =
     python -m build
-    twine check dist/*
+    twine {posargs:check --strict} dist/*
+passenv =
+    TWINE_USERNAME
+    TWINE_PASSWORD
+    TWINE_REPOSITORY_URL
 
-[behave]
-paths = tests/acceptance
-
-[behave.formatters]
-html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
-
-[flake8]
-exclude = .tox,build,dist,behave_html_pretty_formatter.egg-info
-# see https://github.com/PyCQA/pycodestyle/issues/373
-extend-ignore = E203
-per-file-ignores = ./behave_html_pretty_formatter/__init__.py:F401
-max-line-length = 88
+[testenv:ruff]
+description = Lightening-fast linting for Python
+skip_install = true
+deps = ruff
+commands = ruff {posargs:. --show-source}
