--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,8 @@ on:
     - main
 
 env:
-  PY_COLORS: "1"
+  PIP_DISABLE_PIP_VERSION_CHECK: '1'
+  PY_COLORS: '1'
 
 jobs:
   test:
@@ -18,25 +19,24 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-        - ubuntu-20.04
+        - ubuntu-latest
         - macos-latest
         - windows-latest
         python-version:
-        - '3.6'
         - '3.7'
         - '3.8'
         - '3.9'
         - '3.10'
         - '3.11'
-        - 'pypy-3.9'
+        - pypy-3.8
+        - pypy-3.9
+        - pypy-3.10
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install build tools
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools tox-gh-actions wheel
+      run: python -m pip install tox wheel
     - name: Run tests
-      run: tox
+      run: tox run -e py
