--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,91 @@
+[build-system]
+requires = ["setuptools>=59"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "behave-html-pretty-formatter"
+version = "1.10.0"
+description = "Pretty HTML Formatter for Behave"
+readme = "README.md"
+license = {file = "LICENSE"}
+authors = [
+  {name = "Michal Odehnal", email = "modehnal@redhat.com"},
+  {name = "Filip Pokryvka", email = "fpokryvk@redhat.com"},
+  {name = "Peter Bittner", email = "django@bittner.it"},
+  {name = "Luca Macavero", email = "luca.macavero@dorbit.space"},
+]
+maintainers = [
+  {name = "Michal Odehnal", email = "modehnal@redhat.com"},
+  {name = "Filip Pokryvka", email = "fpokryvk@redhat.com"},
+]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Framework :: Django",
+  "Intended Audience :: Information Technology",
+  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
+  "Topic :: Software Development :: Testing",
+  "Topic :: Software Development :: Testing :: BDD",
+]
+keywords = [
+  "behave",
+  "formatter",
+]
+requires-python = ">=3.7"
+dependencies = [
+  "behave",
+  "dominate",
+  "markdown",
+]
+
+[project.urls]
+homepage = "https://github.com/behave-contrib/behave-html-pretty-formatter"
+
+[tool.behave]
+junit = true
+junit_directory = "tests"
+paths = ["tests/acceptance"]
+show_skipped = false
+summary = false
+
+# Define ALIAS for PrettyHTMLFormatter.
+[tool.behave.formatters]
+html-pretty = "behave_html_pretty_formatter:PrettyHTMLFormatter"
+
+# Optional configuration of PrettyHTMLFormmater
+# also possible to use "behave ... -D behave.formatter.html-pretty.{setting}={value}".
+[tool.behave.userdata]
+"behave.formatter.html-pretty.title_string" = "Test Suite Reporter"
+# Example usecase, print {before/after}_scenarios as steps with attached data.
+"behave.formatter.html-pretty.pseudo_steps" = false
+# Structure of the result html page readable(pretty) or condensed.
+"behave.formatter.html-pretty.pretty_output" = true
+# The '%' must be escaped in ini format.
+"behave.formatter.html-pretty.date_format" = "%%d-%%m-%%Y %%H:%%M:%%S"
+# Defines if the summary is expanded upon start.
+"behave.formatter.html-pretty.show_summary" = false
+# Defines if the user is interested in what steps are not executed.
+"behave.formatter.html-pretty.show_unexecuted_steps" = true
+
 [tool.black]
 color = false
 
-[tool.isort]
-color_output = true
-profile = "black"
+[tool.ruff]
+extend-exclude = []
+extend-select = ["B", "BLE", "C4", "C90", "COM", "DJ", "DTZ", "EM", "G", "I", "N", "PIE", "PL", "PT", "PTH", "R", "S", "SIM", "T10", "TID", "W", "YTT"]
+extend-ignore = []
 
-[tool.pylint.master]
-disable = ["missing-module-docstring","too-many-lines","too-many-instance-attributes","too-many-arguments"]
-output-format = "colorized"
+[tool.ruff.per-file-ignores]
+"tests/**/*.py" = ["S101"]
+"tests/acceptance/steps/*.py" = ["F821"]
+
+[tool.setuptools.packages.find]
+namespaces = false
