--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 {
-  "python.linting.pylintEnabled": false,
-  "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true,
-  /* Disable flake8 errors. */
-  "flake8.args": [
-    "--max-line-length=120",
-    "--ignore=E203,W503,F401,F403",
-  ],
+  "[python]": {
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.fixAll": true,
+    },
+    "editor.defaultFormatter": "ms-python.black-formatter",
+  },
   "editor.rulers": [
     88,
     120
@@ -23,5 +22,4 @@
     "reportGeneralTypeIssues": "information",
     "reportWildcardImportFromLibrary": "none",
   },
-  "editor.formatOnSave": true,
 }
