Replace invalid minified JS by valid
and also make behave.js nicer.

--- a/tox.ini
+++ b/tox.ini
@@ -44,9 +44,11 @@ deps = css-html-js-minify
 commands =
     css-html-js-minify behave_html_pretty_formatter/behave.css
     css-html-js-minify behave_html_pretty_formatter/behave.js
+    sed -i 's/};\+else/}else/g' behave_html_pretty_formatter/behave.min.js
     git diff --color --exit-code behave_html_pretty_formatter/behave.min.css behave_html_pretty_formatter/behave.min.js
 allowlist_externals =
     git
+    sed
 
 [testenv:package]
 description = Build package and check metadata (or upload package)
