Adding missing options for behave.ini file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,15 @@ html-pretty = "behave_html_pretty_formatter:PrettyHTMLFormatter"
 # Defines if the user wants to see previous attempts when using auto retry.
 # Auto retry https://github.com/behave/behave/blob/main/behave/contrib/scenario_autoretry.py
 "behave.formatter.html-pretty.show_retry_attempts" = true
-
+# Override global summary visibility
+#  "auto" - show global summary if more than one feature executed (default)
+#  "true" - show global summary
+#  "false" - hide global summary
+"behave.formatter.html-pretty.global_summary" = "auto"
+# Following will be formatted in summary section as "tester: worker1".
+"behave.additional-info.tester" = "worker1"
+# Can be used multiple times.
+"behave.additional-info.location" = "lab2"
 
 [tool.black]
 color = false
