--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,12 +59,12 @@ summary = false
 
 # Define ALIAS for PrettyHTMLFormatter.
 [tool.behave.formatters]
-html-pretty = "behave_html_pretty_formatter:PrettyHTMLFormatter"
+"html-pretty" = "behave_html_pretty_formatter:PrettyHTMLFormatter"
 
 # Optional configuration of PrettyHTMLFormmater
 # also possible to use "behave ... -D behave.formatter.html-pretty.{setting}={value}".
 [tool.behave.userdata]
-"behave.formatter.html-pretty.title_string" = "Test Suite Reporter"
+behave.formatter.html-pretty.title_string = "Test Suite Reporter"
 # Example usecase, print {before/after}_scenarios as steps with attached data.
 "behave.formatter.html-pretty.pseudo_steps" = false
 # Structure of the result html page readable(pretty) or condensed.
