--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,7 +22,6 @@ jobs:
         - black
         - minify
         - package
-        - ruff
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
@@ -32,3 +31,20 @@ jobs:
       run: python -m pip install tox wheel
     - name: Run ${{ matrix.env }}
       run: tox run -e ${{ matrix.env }}
+
+  check-ruff:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        env:
+        - ruff
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    - name: Install build tools
+      run: python -m pip install tox wheel
+    - name: Run ${{ matrix.env }}
+      run: tox run -e ${{ matrix.env }} check
