--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
+      if: ${{ matrix.platform != 'macos-latest' && matrix.python-version == '3.7' }}
+
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install build tools
