Fix a bug, compress auto needs to be validated before the download button

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "[python]": {
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "editor.codeActionsOnSave": {
       /* The 'true' was changed to 'explicit' by VS Code from 1.85 version.*/
       "source.fixAll": "explicit"
