--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ extend-ignore = []
 
 [tool.ruff.per-file-ignores]
 "behave_html_pretty_formatter/__init__.py" = ["F401"]
-"behave_html_pretty_formatter/html_pretty.py" = ["DTZ005", "PLR0913", "SIM102", "SIM117"]
+"behave_html_pretty_formatter/html_pretty.py" = ["DTZ005", "PLR0913", "SIM102", "SIM117", "C901"]
 "tests/**/*.py" = ["S101"]
 "tests/acceptance/steps/*.py" = ["F821"]
 
