Adding basic behave structure to generate an example page for GitHub Pages as an example for anyone to try.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,4 +27,7 @@
     "reportGeneralTypeIssues": "information",
     "reportWildcardImportFromLibrary": "none",
   },
+  "cSpell.words": [
+    "qecore"
+  ],
 }
