For the purposes of the GitHub Pages, show everything.

--- a/tests/formatter_features/behave.ini
+++ b/tests/formatter_features/behave.ini
@@ -14,7 +14,7 @@ behave.formatter.html-pretty.pretty_output = true
 # The '%' must be escaped in ini format.
 behave.formatter.html-pretty.date_format = %%d-%%m-%%Y %%H:%%M:%%S (%%s)
 # Defines if the summary is expanded upon start.
-behave.formatter.html-pretty.show_summary = false
+behave.formatter.html-pretty.show_summary = true
 # Defines if the user is interested in what steps are not executed.
 behave.formatter.html-pretty.show_unexecuted_steps = true
 # Define what to collapse by default, possible values:
@@ -22,7 +22,7 @@ behave.formatter.html-pretty.show_unexecuted_steps = true
 #  "all" - hide everything
 #  comma separated list - specify subset of "scenario,embed,table,text"
 #  "none" - show everything, even embeds
-behave.formatter.html-pretty.collapse = auto
+behave.formatter.html-pretty.collapse = none
 # Defines if the user wants to see previous attempts when using auto retry.
 # Auto retry https://github.com/behave/behave/blob/main/behave/contrib/scenario_autoretry.py
 behave.formatter.html-pretty.show_retry_attempts = true
