Fixing tests, somehow the path is no longer added. Fixing test

--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,10 @@ envlist =
 [testenv]
 description = Tests
 deps =
-    behave[toml]@git+http://github.com/behave/behave.git@v1.2.7.dev5
+    behave==1.2.6
     PyHamcrest
 commands =
-    behave {posargs}
+    behave {posargs: tests/acceptance/}
 
 [testenv:black]
 description = Ensure consistent code style
