Adapting tests to reflect latest changes

--- a/tests/formatter_features/behave.ini
+++ b/tests/formatter_features/behave.ini
@@ -8,7 +8,7 @@ html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
 [behave.userdata]
 behave.formatter.html-pretty.title_string = Dummy Test Suite
 # Example use case, print {before/after}_scenarios as steps with attached data.
-behave.formatter.html-pretty.pseudo_steps = false
+behave.formatter.html-pretty.pseudo_steps = true
 # Structure of the result html page readable(pretty) or condensed.
 behave.formatter.html-pretty.pretty_output = true
 # The '%' must be escaped in ini format.
