--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ keywords = [
 ]
 requires-python = ">=3.6"
 dependencies = [
-  "behave>=1.3.0",
+  "behave==1.3.0",
   "dominate==2.9.0",
   "markdown",
 ]
