Adapting tests and testing files.

--- a/tests/formatter_features/behave.ini
+++ b/tests/formatter_features/behave.ini
@@ -1,5 +1,11 @@
 # -- FILE: behave.ini
 # Define ALIAS for PrettyHTMLFormatter.
+[behave]
+default_format = pretty
+# -- ENSURE: At least one html-pretty formatter is used.
+format = html-pretty
+output = report.html
+
 [behave.formatters]
 html-pretty = behave_html_pretty_formatter:PrettyHTMLFormatter
 
