--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ envlist =
 [testenv]
 description = Tests
 deps =
-    behave==1.2.6
+    behave>=1.3.0
     PyHamcrest
 commands =
     behave {posargs: tests/acceptance/}
